Fixes bug with extra space appearing below modal content

--- a/src/packages/modules/light-compare-d9/css/light-compare-d9.scss
+++ b/src/packages/modules/light-compare-d9/css/light-compare-d9.scss
@@ -31,6 +31,7 @@
   padding: 0;
   .modal-inner {
     max-width: 1100px;
+    overflow: hidden;
   }
   .modal-header,
   .modal-body {
